--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -8,22 +8,13 @@
         </header>
         <body>
             <trans-unit id="extension.title">
-                <source>Gtag</source>
+                <source>Global Site Tag (gtag.js)</source>
             </trans-unit>
             <trans-unit id="tx_googleanalyticsandadwords_domain_model_service">
                 <source>Service</source>
             </trans-unit>
-            <trans-unit id="tx_googleanalyticsandadwords_domain_model_service.product">
-                <source>Google Product</source>
-            </trans-unit>
-            <trans-unit id="tx_googleanalyticsandadwords_domain_model_service.ga_version">
-                <source>Google Analytics Version</source>
-            </trans-unit>
             <trans-unit id="tx_googleanalyticsandadwords_domain_model_service.service_id">
                 <source>Id</source>
-            </trans-unit>
-            <trans-unit id="tx_googleanalyticsandadwords_domain_model_service.conversion_label">
-                <source>Conversion Label</source>
             </trans-unit>
         </body>
     </file>
